<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADCDF0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:persistentDrawingCache="scrolling"
            android:saveEnabled="false"
            android:touchscreenBlocksFocus="false"
            android:transitionGroup="false"
            android:translationY="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/nome_completo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dnasc" />

            <EditText
                android:id="@+id/dnasc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpf" />

            <EditText
                android:id="@+id/cpf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="exemplo@exemplo.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmaremail" />

            <EditText
                android:id="@+id/confirmaremail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone" />

            <EditText
                android:id="@+id/telefone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/celular" />

            <EditText
                android:id="@+id/celular"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/senha_prest" />

            <EditText
                android:id="@+id/senha_prest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/confir_senha_prest" />

            <EditText
                android:id="@+id/confir_senha_prest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btConfirmarClient"
                android:layout_width="129dp"
                android:layout_height="62dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="171dp"
                android:backgroundTintMode="screen"
                android:onClick="btConfirmar"
                android:clickable="true"
                android:text="Confirmar"
                android:textColor="#0E0D0D" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
