<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADCDF0"
    tools:context=".tela_de_login_prestador">

    <Button
        android:id="@+id/btLogin"
        android:layout_width="129dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="171dp"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:text="@string/login"
        android:textColor="#0E0D0D" />

    <Button
        android:id="@+id/btRegistro"
        android:layout_width="129dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="82dp"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:onClick="btRegistro"
        android:text="@string/registro"
        android:textColor="#0E0D0D" />

    <EditText
        android:id="@+id/tLogin"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="-3dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tSenha"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="-3dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword" />

</RelativeLayout>